php-service/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-service
  template:
    metadata:
      labels:
        app: php-service
    spec:
      containers:
        - name: php-service
          image: ghcr.io/satya66123/php-service:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /health.php
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health.php
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 15
