php-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: devops.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: springboot-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-service
                port:
                  number: 80
